GNOME Bugzilla – Bug 774077
clang: fix completion results getting truncated
Last modified: 2016-11-07 20:45:13 UTC
The code passes the wrong object to clang_getNumCompletionChunks in a few places, leading to the wrong number of completion chunks getting iterated. This commit fixes those places up.
Created attachment 339273 [details] [review] clang: fix completion results getting truncated
Attachment 339273 [details] pushed as 5613091 - clang: fix completion results getting truncated