clang: fix completion results getting truncated

The code passes the wrong object to clang_getNumCompletionChunks
in a few places, leading to the wrong number of completion chunks
getting iterated.

This commit fixes those places up.

https://bugzilla.gnome.org/show_bug.cgi?id=774077